--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,12 +4,14 @@ spring:
   application:
     name: hmdp
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
     password: 1234
   redis:
-    host: 192.168.150.101
+#    host: 192.168.150.101
+    host: 127.0.0.1
     port: 6379
 #    password: 123321
     lettuce:
