--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>1.18.32</version> <!-- 显式指定高版本，兼容JDK 16+ -->
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version> <!-- 适配Spring版本即可 -->
+        </dependency>
     </dependencies>
 
     <build>
