将现有的功能的set改造成zset，并解决了有关的栈泄露的问题

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,15 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.16.8</version>
+            <!-- 排除 Redisson 对 Redis 连接工厂的自动配置 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-redis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
     </dependencies>
 
     <build>
