--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,21 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- 显式添加lettuce-core，版本与Spring Boot 2.3.x兼容 -->
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>5.3.7.RELEASE</version> <!-- 与Spring Boot 2.3.12.RELEASE匹配的稳定版 -->
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.3.12.RELEASE</version> <!-- 与你的Spring Boot父版本一致 -->
         </dependency>
         <!--hutool-->
         <dependency>
